--- a/15-homework/package.json
+++ b/15-homework/package.json
@@ -12,6 +12,8 @@
   "author": "Yura",
   "license": "ISC",
   "dependencies": {
+    "@babel/node": "^7.19.1",
+    "@babel/polyfill": "^7.12.1",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
@@ -24,10 +26,7 @@
   "devDependencies": {
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.3",
-    "@babel/preset-env": "^7.19.3",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1"
+    "@babel/preset-env": "^7.19.4",
+    "babel-loader": "^8.2.5"
   }
 }
