homework 17 is builded2

--- a/17-homework/react_hooks/package.json
+++ b/17-homework/react_hooks/package.json
@@ -1,5 +1,5 @@
 {
- "homepage": "https://poslugy1c.github.io/cursor-homework-yura/react_hooks",
+ "homepage": "https://poslugy1c.github.io/cursor-homework-yura",
  "name": "react_hooks",
  "version": "0.1.0",
  "private": true,
