--- a/17-homework/react_hooks/package.json
+++ b/17-homework/react_hooks/package.json
@@ -1,5 +1,5 @@
 {
- "homepage": "https://poslugy1c.github.io/cursor-homework-yura",
+ "homepage": "http://poslugy1c.github.io/cursor_react_hooks",
  "name": "react_hooks",
  "version": "0.1.0",
  "private": true,
@@ -7,7 +7,6 @@
   "@testing-library/jest-dom": "^5.16.5",
   "@testing-library/react": "^13.4.0",
   "@testing-library/user-event": "^13.5.0",
-  "gh-pages": "^4.0.0",
   "react": "^18.2.0",
   "react-dom": "^18.2.0",
   "react-router-dom": "^6.4.3",
@@ -39,5 +38,8 @@
    "last 1 firefox version",
    "last 1 safari version"
   ]
+ },
+ "devDependencies": {
+  "gh-pages": "^4.0.0"
  }
 }
