--- a/19-homework/spa/package.json
+++ b/19-homework/spa/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "http://poslugy1c.github.io/cursor_react_timer",
-  "name": "timer",
+  "name": "spa",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,12 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -37,8 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
   }
 }
